# Lichtfeld-HYWorld2-Plugin

./: .gitignore  NOTICE  README.md  __init__.py  install.ps1  install.sh  pyproject.toml  uninstall.ps1  uninstall.sh
.github/workflows/: ci.yml
core/: colmap_io.py  direct_output.py  downloads.py  job.py  msvc_env.py  pipeline_loader.py  vram_profile.py
hyworld2/worldgen/: README.md
hyworld2/worldrecon/: pipeline.py
hyworld2/worldrecon/hyworldmirror/models/layers/: attention.py  norm_rope.py
hyworld2/worldrecon/hyworldmirror/models/models/: worldmirror.py
hyworld2/worldrecon/hyworldmirror/utils/: inference_utils.py  save_utils.py  visual_util.py
panels/: main_panel.py  main_panel.rcss  main_panel.rml
